K8s-canvass-ingress-new/01-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp1-deployment
  labels:
    app: myapp1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp1
  template: 
    metadata:      
      labels:  
        app: myapp1       
    spec:
      containers: 
        - name: myapp1
          image: pvnnpavan/canvasstest:canvassimg
          ports:
            - containerPort: 8080
