K8s-canvass-ingress-new/03-Ingress-Basic.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp1-ingress
spec:
  rules:  
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: myapp1-clusterip-service
            port: 
              number: 80
